--- a/roles/post/templates/admin-user.yaml.j2
+++ b/roles/post/templates/admin-user.yaml.j2
@@ -2,18 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ko-admin
+  name: admin-user
   namespace: kube-system
+
 ---
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
-  name: ko-admin
-subjects:
-  - kind: ServiceAccount
-    name: ko-admin
-    namespace: kube-system
+  name: admin-user
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: admin-user
+  namespace: kube-system
